Compiled test versions of compiler to target languages