@@ -6,13 +6,14 @@ class LiveCompiler {
   public Optional<RangerGenericClassWriter> langWriter = Optional.empty();
   public HashMap<String,Boolean> hasCreatedPolyfill = new HashMap<String,Boolean>()     /** note: unused */;
   public Optional<CodeNode> lastProcessedNode = Optional.empty();
+  public int repeat_index = 0;
   
   public void initWriter( RangerAppWriterContext ctx ) {
     if ( langWriter.isPresent() ) {
       return;
     }
-    final RangerAppWriterContext root_21 = ctx.getRoot();
-    switch (root_21.targetLangName ) { 
+    final RangerAppWriterContext root = ctx.getRoot();
+    switch (root.targetLangName ) { 
       case "go" : 
         langWriter = Optional.of(new RangerGolangClassWriter());
         break;
@@ -53,42 +54,42 @@ class LiveCompiler {
   }
   
   public String EncodeString( CodeNode node , RangerAppWriterContext ctx , CodeWriter wr ) {
-    /** unused:  final String encoded_str_6 = ""   **/ ;
-    final int str_length_4 = node.string_value.length();
-    String encoded_str_12 = "";
-    int ii_13 = 0;
-    while (ii_13 < str_length_4) {
-      final int ch_6 = (int)node.string_value.charAt(ii_13);
-      final int cc_21 = ch_6;
-      switch (cc_21 ) { 
+    /** unused:  final String encoded_str = ""   **/ ;
+    final int str_length = node.string_value.length();
+    String encoded_str_2 = "";
+    int ii = 0;
+    while (ii < str_length) {
+      final int ch = (int)node.string_value.charAt(ii);
+      final int cc = ch;
+      switch (cc ) { 
         case 8 : 
-          encoded_str_12 = (encoded_str_12 + ((new String( Character.toChars(92))))) + ((new String( Character.toChars(98))));
+          encoded_str_2 = (encoded_str_2 + ((new String( Character.toChars(92))))) + ((new String( Character.toChars(98))));
           break;
         case 9 : 
-          encoded_str_12 = (encoded_str_12 + ((new String( Character.toChars(92))))) + ((new String( Character.toChars(116))));
+          encoded_str_2 = (encoded_str_2 + ((new String( Character.toChars(92))))) + ((new String( Character.toChars(116))));
           break;
         case 10 : 
-          encoded_str_12 = (encoded_str_12 + ((new String( Character.toChars(92))))) + ((new String( Character.toChars(110))));
+          encoded_str_2 = (encoded_str_2 + ((new String( Character.toChars(92))))) + ((new String( Character.toChars(110))));
           break;
         case 12 : 
-          encoded_str_12 = (encoded_str_12 + ((new String( Character.toChars(92))))) + ((new String( Character.toChars(102))));
+          encoded_str_2 = (encoded_str_2 + ((new String( Character.toChars(92))))) + ((new String( Character.toChars(102))));
           break;
         case 13 : 
-          encoded_str_12 = (encoded_str_12 + ((new String( Character.toChars(92))))) + ((new String( Character.toChars(114))));
+          encoded_str_2 = (encoded_str_2 + ((new String( Character.toChars(92))))) + ((new String( Character.toChars(114))));
           break;
         case 34 : 
-          encoded_str_12 = (encoded_str_12 + ((new String( Character.toChars(92))))) + ((new String( Character.toChars(34))));
+          encoded_str_2 = (encoded_str_2 + ((new String( Character.toChars(92))))) + ((new String( Character.toChars(34))));
           break;
         case 92 : 
-          encoded_str_12 = (encoded_str_12 + ((new String( Character.toChars(92))))) + ((new String( Character.toChars(92))));
+          encoded_str_2 = (encoded_str_2 + ((new String( Character.toChars(92))))) + ((new String( Character.toChars(92))));
           break;
         default: 
-          encoded_str_12 = encoded_str_12 + ((new String( Character.toChars(ch_6))));
+          encoded_str_2 = encoded_str_2 + ((new String( Character.toChars(ch))));
           break;
       }
-      ii_13 = ii_13 + 1;
+      ii = ii + 1;
     }
-    return encoded_str_12;
+    return encoded_str_2;
   }
   
   public void WriteScalarValue( CodeNode node , RangerAppWriterContext ctx , CodeWriter wr ) {
@@ -110,28 +111,12 @@ class LiveCompiler {
     langWriter.get().writeTypeDef(node, ctx, wr);
   }
   
+  public void CreateLambdaCall( CodeNode node , RangerAppWriterContext ctx , CodeWriter wr ) {
+    langWriter.get().CreateLambdaCall(node, ctx, wr);
+  }
+  
   public void CreateLambda( CodeNode node , RangerAppWriterContext ctx , CodeWriter wr ) {
-    final CodeNode args_6 = node.children.get(2);
-    final CodeNode body_2 = node.children.get(3);
-    wr.out("(", false);
-    for ( int i_198 = 0; i_198 < args_6.children.size(); i_198++) {
-      CodeNode arg_37 = args_6.children.get(i_198);
-      if ( i_198 > 0 ) {
-        wr.out(", ", false);
-      }
-      wr.out(arg_37.vref, false);
-    }
-    wr.out(")", false);
-    wr.out(" => { ", true);
-    wr.indent(1);
-    wr.out("// body ", true);
-    for ( int i_203 = 0; i_203 < body_2.children.size(); i_203++) {
-      CodeNode item_9 = body_2.children.get(i_203);
-      this.WalkNode(item_9, ctx, wr);
-    }
-    wr.newline();
-    wr.indent(-1);
-    wr.out("}", true);
+    langWriter.get().CreateLambda(node, ctx, wr);
   }
   
   public String getTypeString( String str , RangerAppWriterContext ctx ) {
@@ -139,70 +124,70 @@ class LiveCompiler {
   }
   
   public void findOpCode( CodeNode op , CodeNode node , RangerAppWriterContext ctx , CodeWriter wr ) {
-    final CodeNode fnName_2 = op.children.get(1);
-    final CodeNode args_9 = op.children.get(2);
+    final CodeNode fnName = op.children.get(1);
+    final CodeNode args = op.children.get(2);
     if ( (op.children.size()) > 3 ) {
       final CodeNode details = op.children.get(3);
-      for ( int i_203 = 0; i_203 < details.children.size(); i_203++) {
-        CodeNode det_2 = details.children.get(i_203);
-        if ( (det_2.children.size()) > 0 ) {
-          final CodeNode fc_42 = det_2.children.get(0);
-          if ( fc_42.vref.equals("code") ) {
-            final RangerArgMatch match_4 = new RangerArgMatch();
-            final boolean all_matched_3 = match_4.matchArguments(args_9, node, ctx, 1);
-            if ( all_matched_3 == false ) {
+      for ( int i = 0; i < details.children.size(); i++) {
+        CodeNode det = details.children.get(i);
+        if ( (det.children.size()) > 0 ) {
+          final CodeNode fc = det.children.get(0);
+          if ( fc.vref.equals("code") ) {
+            final RangerArgMatch match = new RangerArgMatch();
+            final boolean all_matched = match.matchArguments(args, node, ctx, 1);
+            if ( all_matched == false ) {
               return;
             }
-            final CodeNode origCode = det_2.children.get(1);
-            final CodeNode theCode = origCode.rebuildWithType(match_4, true);
+            final CodeNode origCode = det.children.get(1);
+            final CodeNode theCode = origCode.rebuildWithType(match, true);
             final RangerAppWriterContext appCtx = ctx.getRoot();
-            final String stdFnName = appCtx.createSignature(fnName_2.vref, (fnName_2.vref + theCode.getCode()));
+            final String stdFnName = appCtx.createSignature(fnName.vref, (fnName.vref + theCode.getCode()));
             final RangerAppClassDesc stdClass = ctx.findClass("RangerStaticMethods");
             final RangerAppWriterContext runCtx = appCtx.fork();
             boolean b_failed = false;
             if ( false == (stdClass.defined_static_methods.containsKey(stdFnName)) ) {
               runCtx.setInMethod();
-              final RangerAppFunctionDesc m_11 = new RangerAppFunctionDesc();
-              m_11.name = stdFnName;
-              m_11.node = Optional.of(op);
-              m_11.is_static = true;
-              m_11.nameNode = Optional.of(fnName_2);
-              m_11.fnBody = Optional.of(theCode);
-              for ( int ii_16 = 0; ii_16 < args_9.children.size(); ii_16++) {
-                CodeNode arg_40 = args_9.children.get(ii_16);
-                final RangerAppParamDesc p_58 = new RangerAppParamDesc();
-                p_58.name = arg_40.vref;
-                p_58.value_type = arg_40.value_type;
-                p_58.node = Optional.of(arg_40);
-                p_58.nameNode = Optional.of(arg_40);
-                p_58.refType = 1;
-                p_58.varType = 4;
-                m_11.params.add(p_58);
-                arg_40.hasParamDesc = true;
-                arg_40.paramDesc = Optional.of(p_58);
-                arg_40.eval_type = arg_40.value_type;
-                arg_40.eval_type_name = arg_40.type_name;
-                runCtx.defineVariable(p_58.name, p_58);
+              final RangerAppFunctionDesc m = new RangerAppFunctionDesc();
+              m.name = stdFnName;
+              m.node = Optional.of(op);
+              m.is_static = true;
+              m.nameNode = Optional.of(fnName);
+              m.fnBody = Optional.of(theCode);
+              for ( int ii = 0; ii < args.children.size(); ii++) {
+                CodeNode arg = args.children.get(ii);
+                final RangerAppParamDesc p = new RangerAppParamDesc();
+                p.name = arg.vref;
+                p.value_type = arg.value_type;
+                p.node = Optional.of(arg);
+                p.nameNode = Optional.of(arg);
+                p.refType = 1;
+                p.varType = 4;
+                m.params.add(p);
+                arg.hasParamDesc = true;
+                arg.paramDesc = Optional.of(p);
+                arg.eval_type = arg.value_type;
+                arg.eval_type_name = arg.type_name;
+                runCtx.defineVariable(p.name, p);
               }
-              stdClass.addStaticMethod(m_11);
-              final int err_cnt_4 = ctx.compilerErrors.size();
+              stdClass.addStaticMethod(m);
+              final int err_cnt = ctx.compilerErrors.size();
               final RangerFlowParser flowParser = new RangerFlowParser();
               final CodeWriter TmpWr = new CodeWriter();
               flowParser.WalkNode(theCode, runCtx, TmpWr);
               runCtx.unsetInMethod();
-              final int err_delta = (ctx.compilerErrors.size()) - err_cnt_4;
+              final int err_delta = (ctx.compilerErrors.size()) - err_cnt;
               if ( err_delta > 0 ) {
                 b_failed = true;
                 System.out.println(String.valueOf( "Had following compiler errors:" ) );
-                for ( int i_217 = 0; i_217 < ctx.compilerErrors.size(); i_217++) {
-                  RangerCompilerMessage e_21 = ctx.compilerErrors.get(i_217);
-                  if ( i_217 < err_cnt_4 ) {
+                for ( int i_1 = 0; i_1 < ctx.compilerErrors.size(); i_1++) {
+                  RangerCompilerMessage e = ctx.compilerErrors.get(i_1);
+                  if ( i_1 < err_cnt ) {
                     continue;
                   }
-                  final int line_index_3 = e_21.node.get().getLine();
-                  System.out.println(String.valueOf( (e_21.node.get().getFilename() + " Line: ") + line_index_3 ) );
-                  System.out.println(String.valueOf( e_21.description ) );
-                  System.out.println(String.valueOf( e_21.node.get().getLineString(line_index_3) ) );
+                  final int line_index = e.node.get().getLine();
+                  System.out.println(String.valueOf( (e.node.get().getFilename() + " Line: ") + line_index ) );
+                  System.out.println(String.valueOf( e.description ) );
+                  System.out.println(String.valueOf( e.node.get().getLineString(line_index) ) );
                 }
               } else {
                 System.out.println(String.valueOf( "no errors found" ) );
@@ -212,15 +197,15 @@ class LiveCompiler {
               wr.out("/* custom operator compilation failed */ ", false);
             } else {
               wr.out(("RangerStaticMethods." + stdFnName) + "(", false);
-              for ( int i_225 = 0; i_225 < node.children.size(); i_225++) {
-                CodeNode cc_24 = node.children.get(i_225);
-                if ( i_225 == 0 ) {
+              for ( int i_2 = 0; i_2 < node.children.size(); i_2++) {
+                CodeNode cc = node.children.get(i_2);
+                if ( i_2 == 0 ) {
                   continue;
                 }
-                if ( i_225 > 1 ) {
+                if ( i_2 > 1 ) {
                   wr.out(", ", false);
                 }
-                this.WalkNode(cc_24, ctx, wr);
+                this.WalkNode(cc, ctx, wr);
               }
               wr.out(")", false);
             }
@@ -232,38 +217,38 @@ class LiveCompiler {
   }
   
   public Optional<CodeNode> findOpTemplate( CodeNode op , CodeNode node , RangerAppWriterContext ctx , CodeWriter wr ) {
-    /** unused:  final CodeNode fnName_5 = op.children.get(1)   **/ ;
-    /** unused:  final RangerAppWriterContext root_24 = ctx.getRoot()   **/ ;
-    final String langName_3 = ctx.getTargetLang();
+    /** unused:  final CodeNode fnName = op.children.get(1)   **/ ;
+    /** unused:  final RangerAppWriterContext root = ctx.getRoot()   **/ ;
+    final String langName = ctx.getTargetLang();
     if ( (op.children.size()) > 3 ) {
-      final CodeNode details_4 = op.children.get(3);
-      for ( int i_209 = 0; i_209 < details_4.children.size(); i_209++) {
-        CodeNode det_5 = details_4.children.get(i_209);
-        if ( (det_5.children.size()) > 0 ) {
-          final CodeNode fc_45 = det_5.children.get(0);
-          if ( fc_45.vref.equals("templates") ) {
-            final CodeNode tplList_2 = det_5.children.get(1);
-            for ( int i_221 = 0; i_221 < tplList_2.children.size(); i_221++) {
-              CodeNode tpl_3 = tplList_2.children.get(i_221);
-              final CodeNode tplName_2 = tpl_3.getFirst();
-              Optional<CodeNode> tplImpl_2 = Optional.empty();
-              tplImpl_2 = Optional.of(tpl_3.getSecond());
-              if ( (!tplName_2.vref.equals("*")) && (!tplName_2.vref.equals(langName_3)) ) {
+      final CodeNode details = op.children.get(3);
+      for ( int i = 0; i < details.children.size(); i++) {
+        CodeNode det = details.children.get(i);
+        if ( (det.children.size()) > 0 ) {
+          final CodeNode fc = det.children.get(0);
+          if ( fc.vref.equals("templates") ) {
+            final CodeNode tplList = det.children.get(1);
+            for ( int i_1 = 0; i_1 < tplList.children.size(); i_1++) {
+              CodeNode tpl = tplList.children.get(i_1);
+              final CodeNode tplName = tpl.getFirst();
+              Optional<CodeNode> tplImpl = Optional.empty();
+              tplImpl = Optional.of(tpl.getSecond());
+              if ( (!tplName.vref.equals("*")) && (!tplName.vref.equals(langName)) ) {
                 continue;
               }
-              if ( tplName_2.hasFlag("mutable") ) {
+              if ( tplName.hasFlag("mutable") ) {
                 if ( false == node.hasFlag("mutable") ) {
                   continue;
                 }
               }
-              return Optional.ofNullable((tplImpl_2.isPresent() ? (CodeNode)tplImpl_2.get() : null ) );
+              return Optional.ofNullable((tplImpl.isPresent() ? (CodeNode)tplImpl.get() : null ) );
             }
           }
         }
       }
     }
-    final Optional<CodeNode> non_2 = Optional.empty();
-    return Optional.ofNullable((non_2.isPresent() ? (CodeNode)non_2.get() : null ) );
+    final Optional<CodeNode> non = Optional.empty();
+    return Optional.ofNullable((non.isPresent() ? (CodeNode)non.get() : null ) );
   }
   
   public boolean localCall( CodeNode node , RangerAppWriterContext ctx , CodeWriter wr ) {
@@ -278,7 +263,11 @@ class LiveCompiler {
       return true;
     }
     if ( node.hasVarDef ) {
-      langWriter.get().writeVarDef(node, ctx, wr);
+      if ( node.disabled_node ) {
+        langWriter.get().disabledVarDef(node, ctx, wr);
+      } else {
+        langWriter.get().writeVarDef(node, ctx, wr);
+      }
       return true;
     }
     if ( node.hasClassDescription ) {
@@ -306,25 +295,29 @@ class LiveCompiler {
     if ( (node.children.size()) > 0 ) {
       if ( node.has_operator ) {
         final CodeNode op = ctx.findOperator(node);
-        /** unused:  final CodeNode fc_47 = op.getFirst()   **/ ;
-        final Optional<CodeNode> tplImpl_5 = this.findOpTemplate(op, node, ctx, wr);
+        /** unused:  final CodeNode fc = op.getFirst()   **/ ;
+        final Optional<CodeNode> tplImpl = this.findOpTemplate(op, node, ctx, wr);
         RangerAppWriterContext evalCtx = ctx;
         if ( node.evalCtx.isPresent() ) {
           evalCtx = node.evalCtx.get();
         }
-        if ( tplImpl_5.isPresent() ) {
+        if ( tplImpl.isPresent() ) {
           final CodeNode opName = op.getSecond();
           if ( opName.hasFlag("returns") ) {
             langWriter.get().release_local_vars(node, evalCtx, wr);
           }
-          this.walkCommandList(tplImpl_5.get(), node, evalCtx, wr);
+          this.walkCommandList(tplImpl.get(), node, evalCtx, wr);
         } else {
           this.findOpCode(op, node, evalCtx, wr);
         }
         return;
       }
-      if ( node.isFirstVref("lambda") ) {
+      if ( node.has_lambda ) {
         this.CreateLambda(node, ctx, wr);
+        return;
+      }
+      if ( node.has_lambda_call ) {
+        this.CreateLambdaCall(node, ctx, wr);
         return;
       }
       if ( (node.children.size()) > 1 ) {
@@ -332,15 +325,15 @@ class LiveCompiler {
           return;
         }
       }
-      /** unused:  final CodeNode fc_53 = node.getFirst()   **/ ;
+      /** unused:  final CodeNode fc_1 = node.getFirst()   **/ ;
     }
     if ( node.expression ) {
-      for ( int i_213 = 0; i_213 < node.children.size(); i_213++) {
-        CodeNode item_12 = node.children.get(i_213);
-        if ( (node.didReturnAtIndex >= 0) && (node.didReturnAtIndex < i_213) ) {
+      for ( int i = 0; i < node.children.size(); i++) {
+        CodeNode item = node.children.get(i);
+        if ( (node.didReturnAtIndex >= 0) && (node.didReturnAtIndex < i) ) {
           break;
         }
-        this.WalkNode(item_12, ctx, wr);
+        this.WalkNode(item, ctx, wr);
       }
     } else {
     }
@@ -353,9 +346,9 @@ class LiveCompiler {
     if ( ctx.expressionLevel() > 1 ) {
       wr.out("(", false);
     }
-    for ( int i_215 = 0; i_215 < cmd.children.size(); i_215++) {
-      CodeNode c_12 = cmd.children.get(i_215);
-      this.walkCommand(c_12, node, ctx, wr);
+    for ( int i = 0; i < cmd.children.size(); i++) {
+      CodeNode c = cmd.children.get(i);
+      this.walkCommand(c, node, ctx, wr);
     }
     if ( ctx.expressionLevel() > 1 ) {
       wr.out(")", false);
@@ -367,181 +360,218 @@ class LiveCompiler {
   
   public void walkCommand( CodeNode cmd , CodeNode node , RangerAppWriterContext ctx , CodeWriter wr ) {
     if ( cmd.expression ) {
+      if ( (cmd.children.size()) < 2 ) {
+        ctx.addError(node, "Invalid command");
+        ctx.addError(cmd, "Invalid command");
+        return;
+      }
       final CodeNode cmdE = cmd.getFirst();
       final CodeNode cmdArg = cmd.getSecond();
       switch (cmdE.vref ) { 
         case "str" : 
-          final int idx_8 = cmdArg.int_value;
-          if ( (node.children.size()) > idx_8 ) {
-            final CodeNode arg_42 = node.children.get(idx_8);
-            wr.out(arg_42.string_value, false);
+          final int idx = cmdArg.int_value;
+          if ( (node.children.size()) > idx ) {
+            final CodeNode arg = node.children.get(idx);
+            wr.out(arg.string_value, false);
           }
           break;
         case "block" : 
-          final int idx_17 = cmdArg.int_value;
-          if ( (node.children.size()) > idx_17 ) {
-            final CodeNode arg_50 = node.children.get(idx_17);
-            this.WalkNode(arg_50, ctx, wr);
+          final int idx_1 = cmdArg.int_value;
+          if ( (node.children.size()) > idx_1 ) {
+            final CodeNode arg_1 = node.children.get(idx_1);
+            this.WalkNode(arg_1, ctx, wr);
           }
           break;
         case "varname" : 
           if ( ctx.isVarDefined(cmdArg.vref) ) {
-            final RangerAppParamDesc p_61 = ctx.getVariableDef(cmdArg.vref);
-            wr.out(p_61.compiledName, false);
+            final RangerAppParamDesc p = ctx.getVariableDef(cmdArg.vref);
+            wr.out(p.compiledName, false);
           }
           break;
         case "defvar" : 
-          final RangerAppParamDesc p_69 = new RangerAppParamDesc();
-          p_69.name = cmdArg.vref;
-          p_69.value_type = cmdArg.value_type;
-          p_69.node = Optional.of(cmdArg);
-          p_69.nameNode = Optional.of(cmdArg);
-          p_69.is_optional = false;
-          ctx.defineVariable(p_69.name, p_69);
+          final RangerAppParamDesc p_1 = new RangerAppParamDesc();
+          p_1.name = cmdArg.vref;
+          p_1.value_type = cmdArg.value_type;
+          p_1.node = Optional.of(cmdArg);
+          p_1.nameNode = Optional.of(cmdArg);
+          p_1.is_optional = false;
+          ctx.defineVariable(p_1.name, p_1);
           break;
         case "cc" : 
-          final int idx_22 = cmdArg.int_value;
-          if ( (node.children.size()) > idx_22 ) {
-            final CodeNode arg_55 = node.children.get(idx_22);
-            final byte cc_26 = ((arg_55.string_value.getBytes())[0]);
-            wr.out("" + (cc_26), false);
+          final int idx_2 = cmdArg.int_value;
+          if ( (node.children.size()) > idx_2 ) {
+            final CodeNode arg_2 = node.children.get(idx_2);
+            final byte cc = ((arg_2.string_value.getBytes())[0]);
+            wr.out("" + (cc), false);
           }
           break;
         case "java_case" : 
-          final int idx_27 = cmdArg.int_value;
-          if ( (node.children.size()) > idx_27 ) {
-            final CodeNode arg_60 = node.children.get(idx_27);
-            this.WalkNode(arg_60, ctx, wr);
-            if ( arg_60.didReturnAtIndex < 0 ) {
+          final int idx_3 = cmdArg.int_value;
+          if ( (node.children.size()) > idx_3 ) {
+            final CodeNode arg_3 = node.children.get(idx_3);
+            this.WalkNode(arg_3, ctx, wr);
+            if ( arg_3.didReturnAtIndex < 0 ) {
               wr.newline();
               wr.out("break;", true);
             }
           }
           break;
         case "e" : 
-          final int idx_32 = cmdArg.int_value;
-          if ( (node.children.size()) > idx_32 ) {
-            final CodeNode arg_65 = node.children.get(idx_32);
+          final int idx_4 = cmdArg.int_value;
+          if ( (node.children.size()) > idx_4 ) {
+            final CodeNode arg_4 = node.children.get(idx_4);
             ctx.setInExpr();
-            this.WalkNode(arg_65, ctx, wr);
+            this.WalkNode(arg_4, ctx, wr);
             ctx.unsetInExpr();
           }
           break;
         case "goset" : 
-          final int idx_37 = cmdArg.int_value;
-          if ( (node.children.size()) > idx_37 ) {
-            final CodeNode arg_70 = node.children.get(idx_37);
+          final int idx_5 = cmdArg.int_value;
+          if ( (node.children.size()) > idx_5 ) {
+            final CodeNode arg_5 = node.children.get(idx_5);
             ctx.setInExpr();
-            langWriter.get().WriteSetterVRef(arg_70, ctx, wr);
+            langWriter.get().WriteSetterVRef(arg_5, ctx, wr);
             ctx.unsetInExpr();
           }
           break;
         case "pe" : 
-          final int idx_42 = cmdArg.int_value;
-          if ( (node.children.size()) > idx_42 ) {
-            final CodeNode arg_75 = node.children.get(idx_42);
-            this.WalkNode(arg_75, ctx, wr);
+          final int idx_6 = cmdArg.int_value;
+          if ( (node.children.size()) > idx_6 ) {
+            final CodeNode arg_6 = node.children.get(idx_6);
+            this.WalkNode(arg_6, ctx, wr);
           }
           break;
         case "ptr" : 
-          final int idx_47 = cmdArg.int_value;
-          if ( (node.children.size()) > idx_47 ) {
-            final CodeNode arg_80 = node.children.get(idx_47);
-            if ( arg_80.hasParamDesc ) {
-              if ( arg_80.paramDesc.get().nameNode.get().isAPrimitiveType() == false ) {
+          final int idx_7 = cmdArg.int_value;
+          if ( (node.children.size()) > idx_7 ) {
+            final CodeNode arg_7 = node.children.get(idx_7);
+            if ( arg_7.hasParamDesc ) {
+              if ( arg_7.paramDesc.get().nameNode.get().isAPrimitiveType() == false ) {
                 wr.out("*", false);
               }
             } else {
-              if ( arg_80.isAPrimitiveType() == false ) {
+              if ( arg_7.isAPrimitiveType() == false ) {
                 wr.out("*", false);
               }
             }
           }
           break;
         case "ptrsrc" : 
-          final int idx_52 = cmdArg.int_value;
-          if ( (node.children.size()) > idx_52 ) {
-            final CodeNode arg_85 = node.children.get(idx_52);
-            if ( (arg_85.isPrimitiveType() == false) && (arg_85.isPrimitive() == false) ) {
+          final int idx_8 = cmdArg.int_value;
+          if ( (node.children.size()) > idx_8 ) {
+            final CodeNode arg_8 = node.children.get(idx_8);
+            if ( (arg_8.isPrimitiveType() == false) && (arg_8.isPrimitive() == false) ) {
               wr.out("&", false);
             }
           }
           break;
         case "nameof" : 
-          final int idx_57 = cmdArg.int_value;
-          if ( (node.children.size()) > idx_57 ) {
-            final CodeNode arg_90 = node.children.get(idx_57);
-            wr.out(arg_90.vref, false);
+          final int idx_9 = cmdArg.int_value;
+          if ( (node.children.size()) > idx_9 ) {
+            final CodeNode arg_9 = node.children.get(idx_9);
+            wr.out(arg_9.vref, false);
           }
           break;
         case "list" : 
-          final int idx_62 = cmdArg.int_value;
-          if ( (node.children.size()) > idx_62 ) {
-            final CodeNode arg_95 = node.children.get(idx_62);
-            for ( int i_217 = 0; i_217 < arg_95.children.size(); i_217++) {
-              CodeNode ch_9 = arg_95.children.get(i_217);
-              if ( i_217 > 0 ) {
+          final int idx_10 = cmdArg.int_value;
+          if ( (node.children.size()) > idx_10 ) {
+            final CodeNode arg_10 = node.children.get(idx_10);
+            for ( int i = 0; i < arg_10.children.size(); i++) {
+              CodeNode ch = arg_10.children.get(i);
+              if ( i > 0 ) {
                 wr.out(" ", false);
               }
               ctx.setInExpr();
-              this.WalkNode(ch_9, ctx, wr);
+              this.WalkNode(ch, ctx, wr);
               ctx.unsetInExpr();
             }
           }
           break;
+        case "repeat_from" : 
+          final int idx_11 = cmdArg.int_value;
+          repeat_index = idx_11;
+          if ( (node.children.size()) >= idx_11 ) {
+            final CodeNode cmdToRepeat = cmd.getThird();
+            int i_1 = idx_11;
+            while (i_1 < (node.children.size())) {
+              if ( i_1 >= idx_11 ) {
+                for ( int ii = 0; ii < cmdToRepeat.children.size(); ii++) {
+                  CodeNode cc_1 = cmdToRepeat.children.get(ii);
+                  if ( (cc_1.children.size()) > 0 ) {
+                    final CodeNode fc = cc_1.getFirst();
+                    if ( fc.vref.equals("e") ) {
+                      final CodeNode dc = cc_1.getSecond();
+                      dc.int_value = i_1;
+                    }
+                    if ( fc.vref.equals("block") ) {
+                      final CodeNode dc_1 = cc_1.getSecond();
+                      dc_1.int_value = i_1;
+                    }
+                  }
+                }
+                this.walkCommandList(cmdToRepeat, node, ctx, wr);
+                if ( (i_1 + 1) < (node.children.size()) ) {
+                  wr.out(",", false);
+                }
+              }
+              i_1 = i_1 + 1;
+            }
+          }
+          break;
         case "comma" : 
-          final int idx_67 = cmdArg.int_value;
-          if ( (node.children.size()) > idx_67 ) {
-            final CodeNode arg_100 = node.children.get(idx_67);
-            for ( int i_225 = 0; i_225 < arg_100.children.size(); i_225++) {
-              CodeNode ch_17 = arg_100.children.get(i_225);
-              if ( i_225 > 0 ) {
+          final int idx_12 = cmdArg.int_value;
+          if ( (node.children.size()) > idx_12 ) {
+            final CodeNode arg_11 = node.children.get(idx_12);
+            for ( int i_2 = 0; i_2 < arg_11.children.size(); i_2++) {
+              CodeNode ch_1 = arg_11.children.get(i_2);
+              if ( i_2 > 0 ) {
                 wr.out(",", false);
               }
               ctx.setInExpr();
-              this.WalkNode(ch_17, ctx, wr);
+              this.WalkNode(ch_1, ctx, wr);
               ctx.unsetInExpr();
             }
           }
           break;
         case "swift_rc" : 
-          final int idx_72 = cmdArg.int_value;
-          if ( (node.children.size()) > idx_72 ) {
-            final CodeNode arg_105 = node.children.get(idx_72);
-            if ( arg_105.hasParamDesc ) {
-              if ( arg_105.paramDesc.get().ref_cnt == 0 ) {
+          final int idx_13 = cmdArg.int_value;
+          if ( (node.children.size()) > idx_13 ) {
+            final CodeNode arg_12 = node.children.get(idx_13);
+            if ( arg_12.hasParamDesc ) {
+              if ( arg_12.paramDesc.get().ref_cnt == 0 ) {
                 wr.out("_", false);
               } else {
-                wr.out(arg_105.vref, false);
+                final RangerAppParamDesc p_2 = ctx.getVariableDef(arg_12.vref);
+                wr.out(p_2.compiledName, false);
               }
             } else {
-              wr.out(arg_105.vref, false);
+              wr.out(arg_12.vref, false);
             }
           }
           break;
         case "r_ktype" : 
-          final int idx_77 = cmdArg.int_value;
-          if ( (node.children.size()) > idx_77 ) {
-            final CodeNode arg_110 = node.children.get(idx_77);
-            if ( arg_110.hasParamDesc ) {
-              final String ss = langWriter.get().getObjectTypeString(arg_110.paramDesc.get().nameNode.get().key_type, ctx);
+          final int idx_14 = cmdArg.int_value;
+          if ( (node.children.size()) > idx_14 ) {
+            final CodeNode arg_13 = node.children.get(idx_14);
+            if ( arg_13.hasParamDesc ) {
+              final String ss = langWriter.get().getObjectTypeString(arg_13.paramDesc.get().nameNode.get().key_type, ctx);
               wr.out(ss, false);
             } else {
-              final String ss_17 = langWriter.get().getObjectTypeString(arg_110.key_type, ctx);
-              wr.out(ss_17, false);
+              final String ss_1 = langWriter.get().getObjectTypeString(arg_13.key_type, ctx);
+              wr.out(ss_1, false);
             }
           }
           break;
         case "r_atype" : 
-          final int idx_82 = cmdArg.int_value;
-          if ( (node.children.size()) > idx_82 ) {
-            final CodeNode arg_115 = node.children.get(idx_82);
-            if ( arg_115.hasParamDesc ) {
-              final String ss_15 = langWriter.get().getObjectTypeString(arg_115.paramDesc.get().nameNode.get().array_type, ctx);
-              wr.out(ss_15, false);
+          final int idx_15 = cmdArg.int_value;
+          if ( (node.children.size()) > idx_15 ) {
+            final CodeNode arg_14 = node.children.get(idx_15);
+            if ( arg_14.hasParamDesc ) {
+              final String ss_2 = langWriter.get().getObjectTypeString(arg_14.paramDesc.get().nameNode.get().array_type, ctx);
+              wr.out(ss_2, false);
             } else {
-              final String ss_27 = langWriter.get().getObjectTypeString(arg_115.array_type, ctx);
-              wr.out(ss_27, false);
+              final String ss_3 = langWriter.get().getObjectTypeString(arg_14.array_type, ctx);
+              wr.out(ss_3, false);
             }
           }
           break;
@@ -549,24 +579,24 @@ class LiveCompiler {
           langWriter.get().CustomOperator(node, ctx, wr);
           break;
         case "arraytype" : 
-          final int idx_87 = cmdArg.int_value;
-          if ( (node.children.size()) > idx_87 ) {
-            final CodeNode arg_120 = node.children.get(idx_87);
-            if ( arg_120.hasParamDesc ) {
-              langWriter.get().writeArrayTypeDef(arg_120.paramDesc.get().nameNode.get(), ctx, wr);
+          final int idx_16 = cmdArg.int_value;
+          if ( (node.children.size()) > idx_16 ) {
+            final CodeNode arg_15 = node.children.get(idx_16);
+            if ( arg_15.hasParamDesc ) {
+              langWriter.get().writeArrayTypeDef(arg_15.paramDesc.get().nameNode.get(), ctx, wr);
             } else {
-              langWriter.get().writeArrayTypeDef(arg_120, ctx, wr);
+              langWriter.get().writeArrayTypeDef(arg_15, ctx, wr);
             }
           }
           break;
         case "rawtype" : 
-          final int idx_92 = cmdArg.int_value;
-          if ( (node.children.size()) > idx_92 ) {
-            final CodeNode arg_125 = node.children.get(idx_92);
-            if ( arg_125.hasParamDesc ) {
-              langWriter.get().writeRawTypeDef(arg_125.paramDesc.get().nameNode.get(), ctx, wr);
+          final int idx_17 = cmdArg.int_value;
+          if ( (node.children.size()) > idx_17 ) {
+            final CodeNode arg_16 = node.children.get(idx_17);
+            if ( arg_16.hasParamDesc ) {
+              langWriter.get().writeRawTypeDef(arg_16.paramDesc.get().nameNode.get(), ctx, wr);
             } else {
-              langWriter.get().writeRawTypeDef(arg_125, ctx, wr);
+              langWriter.get().writeRawTypeDef(arg_16, ctx, wr);
             }
           }
           break;
@@ -577,7 +607,7 @@ class LiveCompiler {
           testCtx.restartExpressionLevel();
           this.walkCommandList(cmdArg, node, testCtx, newWriter);
           final String p_str = newWriter.getCode();
-          /** unused:  final RangerAppWriterContext root_26 = ctx.getRoot()   **/ ;
+          /** unused:  final RangerAppWriterContext root = ctx.getRoot()   **/ ;
           if ( (p_write.compiledTags.containsKey(p_str)) == false ) {
             p_write.compiledTags.put(p_str, true);
             final RangerAppWriterContext mCtx = ctx.fork();
@@ -586,21 +616,21 @@ class LiveCompiler {
           }
           break;
         case "create_polyfill" : 
-          final CodeWriter p_write_10 = wr.getTag("utilities");
-          final String p_str_10 = cmdArg.string_value;
-          if ( (p_write_10.compiledTags.containsKey(p_str_10)) == false ) {
-            p_write_10.raw(p_str_10, true);
-            p_write_10.compiledTags.put(p_str_10, true);
+          final CodeWriter p_write_1 = wr.getTag("utilities");
+          final String p_str_1 = cmdArg.string_value;
+          if ( (p_write_1.compiledTags.containsKey(p_str_1)) == false ) {
+            p_write_1.raw(p_str_1, true);
+            p_write_1.compiledTags.put(p_str_1, true);
           }
           break;
         case "typeof" : 
-          final int idx_97 = cmdArg.int_value;
-          if ( (node.children.size()) >= idx_97 ) {
-            final CodeNode arg_130 = node.children.get(idx_97);
-            if ( arg_130.hasParamDesc ) {
-              this.writeTypeDef(arg_130.paramDesc.get().nameNode.get(), ctx, wr);
+          final int idx_18 = cmdArg.int_value;
+          if ( (node.children.size()) >= idx_18 ) {
+            final CodeNode arg_17 = node.children.get(idx_18);
+            if ( arg_17.hasParamDesc ) {
+              this.writeTypeDef(arg_17.paramDesc.get().nameNode.get(), ctx, wr);
             } else {
-              this.writeTypeDef(arg_130, ctx, wr);
+              this.writeTypeDef(arg_17, ctx, wr);
             }
           }
           break;
@@ -608,13 +638,13 @@ class LiveCompiler {
           langWriter.get().import_lib(cmdArg.string_value, ctx, wr);
           break;
         case "atype" : 
-          final int idx_102 = cmdArg.int_value;
-          if ( (node.children.size()) >= idx_102 ) {
-            final CodeNode arg_135 = node.children.get(idx_102);
-            final Optional<RangerAppParamDesc> p_74 = this.findParamDesc(arg_135, ctx, wr);
-            final CodeNode nameNode_3 = p_74.get().nameNode.get();
-            final String tn_3 = nameNode_3.array_type;
-            wr.out(this.getTypeString(tn_3, ctx), false);
+          final int idx_19 = cmdArg.int_value;
+          if ( (node.children.size()) >= idx_19 ) {
+            final CodeNode arg_18 = node.children.get(idx_19);
+            final Optional<RangerAppParamDesc> p_3 = this.findParamDesc(arg_18, ctx, wr);
+            final CodeNode nameNode = p_3.get().nameNode.get();
+            final String tn = nameNode.array_type;
+            wr.out(this.getTypeString(tn, ctx), false);
           }
           break;
       }
@@ -624,6 +654,9 @@ class LiveCompiler {
           case "nl" : 
             wr.newline();
             break;
+          case "space" : 
+            wr.out(" ", false);
+            break;
           case "I" : 
             wr.indent(1);
             break;
@@ -631,8 +664,8 @@ class LiveCompiler {
             wr.indent(-1);
             break;
           case "op" : 
-            final CodeNode fc_51 = node.getFirst();
-            wr.out(fc_51.vref, false);
+            final CodeNode fc_1 = node.getFirst();
+            wr.out(fc_1.vref, false);
             break;
         }
       } else {
@@ -647,93 +680,93 @@ class LiveCompiler {
   }
   
   public Optional<RangerAppParamDesc> findParamDesc( CodeNode obj , RangerAppWriterContext ctx , CodeWriter wr ) {
-    Optional<RangerAppParamDesc> varDesc_3 = Optional.empty();
-    boolean set_nsp_2 = false;
-    Optional<RangerAppClassDesc> classDesc_4 = Optional.empty();
+    Optional<RangerAppParamDesc> varDesc = Optional.empty();
+    boolean set_nsp = false;
+    Optional<RangerAppClassDesc> classDesc = Optional.empty();
     if ( 0 == (obj.nsp.size()) ) {
-      set_nsp_2 = true;
+      set_nsp = true;
     }
     if ( !obj.vref.equals("this") ) {
       if ( (obj.ns.size()) > 1 ) {
-        final int cnt_6 = obj.ns.size();
-        Optional<RangerAppParamDesc> classRefDesc_3 = Optional.empty();
-        for ( int i_221 = 0; i_221 < obj.ns.size(); i_221++) {
-          String strname_3 = obj.ns.get(i_221);
-          if ( i_221 == 0 ) {
-            if ( strname_3.equals("this") ) {
-              classDesc_4 = ctx.getCurrentClass();
-              if ( set_nsp_2 ) {
-                obj.nsp.add(classDesc_4.get());
+        final int cnt = obj.ns.size();
+        Optional<RangerAppParamDesc> classRefDesc = Optional.empty();
+        for ( int i = 0; i < obj.ns.size(); i++) {
+          String strname = obj.ns.get(i);
+          if ( i == 0 ) {
+            if ( strname.equals("this") ) {
+              classDesc = ctx.getCurrentClass();
+              if ( set_nsp ) {
+                obj.nsp.add(classDesc.get());
               }
             } else {
-              if ( ctx.isDefinedClass(strname_3) ) {
-                classDesc_4 = Optional.of(ctx.findClass(strname_3));
-                if ( set_nsp_2 ) {
-                  obj.nsp.add(classDesc_4.get());
+              if ( ctx.isDefinedClass(strname) ) {
+                classDesc = Optional.of(ctx.findClass(strname));
+                if ( set_nsp ) {
+                  obj.nsp.add(classDesc.get());
                 }
                 continue;
               }
-              classRefDesc_3 = Optional.of(ctx.getVariableDef(strname_3));
-              if ( !classRefDesc_3.isPresent() ) {
-                ctx.addError(obj, "Error, no description for called object: " + strname_3);
+              classRefDesc = Optional.of(ctx.getVariableDef(strname));
+              if ( !classRefDesc.isPresent() ) {
+                ctx.addError(obj, "Error, no description for called object: " + strname);
                 break;
               }
-              if ( set_nsp_2 ) {
-                obj.nsp.add(classRefDesc_3.get());
+              if ( set_nsp ) {
+                obj.nsp.add(classRefDesc.get());
               }
-              classRefDesc_3.get().ref_cnt = 1 + classRefDesc_3.get().ref_cnt;
-              classDesc_4 = Optional.of(ctx.findClass(classRefDesc_3.get().nameNode.get().type_name));
+              classRefDesc.get().ref_cnt = 1 + classRefDesc.get().ref_cnt;
+              classDesc = Optional.of(ctx.findClass(classRefDesc.get().nameNode.get().type_name));
             }
           } else {
-            if ( i_221 < (cnt_6 - 1) ) {
-              varDesc_3 = classDesc_4.get().findVariable(strname_3);
-              if ( !varDesc_3.isPresent() ) {
-                ctx.addError(obj, "Error, no description for refenced obj: " + strname_3);
+            if ( i < (cnt - 1) ) {
+              varDesc = classDesc.get().findVariable(strname);
+              if ( !varDesc.isPresent() ) {
+                ctx.addError(obj, "Error, no description for refenced obj: " + strname);
               }
-              final String subClass_3 = varDesc_3.get().getTypeName();
-              classDesc_4 = Optional.of(ctx.findClass(subClass_3));
-              if ( set_nsp_2 ) {
-                obj.nsp.add(varDesc_3.get());
+              final String subClass = varDesc.get().getTypeName();
+              classDesc = Optional.of(ctx.findClass(subClass));
+              if ( set_nsp ) {
+                obj.nsp.add(varDesc.get());
               }
               continue;
             }
-            if ( classDesc_4.isPresent() ) {
-              varDesc_3 = classDesc_4.get().findVariable(strname_3);
-              if ( !varDesc_3.isPresent() ) {
-                Optional<RangerAppFunctionDesc> classMethod_2 = classDesc_4.get().findMethod(strname_3);
-                if ( !classMethod_2.isPresent() ) {
-                  classMethod_2 = classDesc_4.get().findStaticMethod(strname_3);
-                  if ( !classMethod_2.isPresent() ) {
-                    ctx.addError(obj, "variable not found " + strname_3);
+            if ( classDesc.isPresent() ) {
+              varDesc = classDesc.get().findVariable(strname);
+              if ( !varDesc.isPresent() ) {
+                Optional<RangerAppFunctionDesc> classMethod = classDesc.get().findMethod(strname);
+                if ( !classMethod.isPresent() ) {
+                  classMethod = classDesc.get().findStaticMethod(strname);
+                  if ( !classMethod.isPresent() ) {
+                    ctx.addError(obj, "variable not found " + strname);
                   }
                 }
-                if ( classMethod_2.isPresent() ) {
-                  if ( set_nsp_2 ) {
-                    obj.nsp.add(classMethod_2.get());
+                if ( classMethod.isPresent() ) {
+                  if ( set_nsp ) {
+                    obj.nsp.add(classMethod.get());
                   }
-                  return Optional.ofNullable((classMethod_2.isPresent() ? (RangerAppParamDesc)classMethod_2.get() : null ) );
+                  return Optional.ofNullable((classMethod.isPresent() ? (RangerAppParamDesc)classMethod.get() : null ) );
                 }
               }
-              if ( set_nsp_2 ) {
-                obj.nsp.add(varDesc_3.get());
+              if ( set_nsp ) {
+                obj.nsp.add(varDesc.get());
               }
             }
           }
         }
-        return Optional.ofNullable((varDesc_3.isPresent() ? (RangerAppParamDesc)varDesc_3.get() : null ) );
+        return Optional.ofNullable((varDesc.isPresent() ? (RangerAppParamDesc)varDesc.get() : null ) );
       }
-      varDesc_3 = Optional.of(ctx.getVariableDef(obj.vref));
-      if ( varDesc_3.get().nameNode.isPresent() ) {
+      varDesc = Optional.of(ctx.getVariableDef(obj.vref));
+      if ( varDesc.get().nameNode.isPresent() ) {
       } else {
         System.out.println(String.valueOf( "findParamDesc : description not found for " + obj.vref ) );
-        if ( varDesc_3.isPresent() ) {
-          System.out.println(String.valueOf( "Vardesc was found though..." + varDesc_3.get().name ) );
+        if ( varDesc.isPresent() ) {
+          System.out.println(String.valueOf( "Vardesc was found though..." + varDesc.get().name ) );
         }
         ctx.addError(obj, "Error, no description for called object: " + obj.vref);
       }
-      return Optional.ofNullable((varDesc_3.isPresent() ? (RangerAppParamDesc)varDesc_3.get() : null ) );
+      return Optional.ofNullable((varDesc.isPresent() ? (RangerAppParamDesc)varDesc.get() : null ) );
     }
-    final Optional<RangerAppClassDesc> cc_28 = ctx.getCurrentClass();
-    return Optional.ofNullable((cc_28.isPresent() ? (RangerAppParamDesc)cc_28.get() : null ) );
+    final Optional<RangerAppClassDesc> cc = ctx.getCurrentClass();
+    return Optional.ofNullable((cc.isPresent() ? (RangerAppParamDesc)cc.get() : null ) );
   }
 }
